# phantom-ear

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
plans/: ui-ux-improvements.md
src/: app.css  app.html
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/nsis/: hooks.nsi
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/asr/: backend.rs  mel.rs  mod.rs  parakeet_backend.rs  whisper_backend.rs
src-tauri/src/audio/: mod.rs  system.rs
src-tauri/src/detection/: mod.rs
src-tauri/src/embeddings/: mod.rs
src-tauri/src/llm/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/specs/: mod.rs
src-tauri/src/storage/: mod.rs
src-tauri/src/transcription/: mod.rs
src-tauri/src/websearch/: mod.rs
src/lib/: types.ts
src/lib/components/: AudioLevelIndicator.svelte  EditableSegment.svelte  HomeMetrics.svelte  MeetingItem.svelte  MeetingNotification.svelte  Onboarding.svelte  RecordingIndicator.svelte  ReferenceCard.svelte  SearchOverlay.svelte  Settings.svelte  Setup.svelte  Sidebar.svelte  TopBar.svelte  TranscriptTimeline.svelte
src/lib/stores/: meetings.svelte.ts  theme.svelte.ts
src/lib/utils/: keyboard.ts
src/routes/: +layout.svelte  +page.svelte
