[package]
name = "sidecar"
version = "0.1.0"
description = "Privacy-first desktop meeting assistant"
authors = ["Mosaab"]
edition = "2021"

[lib]
name = "sidecar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Audio capture
cpal = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client for LLM APIs
reqwest = { version = "0.12", features = ["json"] }

# Channel communication
crossbeam-channel = "0.5"

