[package]
name = "phantom-ear"
version = "0.1.0"
description = "Privacy-first desktop meeting assistant"
authors = ["Mosaab"]
edition = "2021"

[lib]
name = "phantom_ear_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Audio capture
cpal = "0.15"

# Speech recognition (Whisper)
whisper-rs = "0.12"

# ONNX Runtime (used for embeddings, optionally for Parakeet ASR)
ort = { version = "2.0.0-rc.11", features = ["download-binaries"] }
ndarray = "0.16"
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

# Parakeet ASR (optional — needs rustfft)
rustfft = { version = "6.2", optional = true }

# Audio processing
hound = "3.5"  # WAV file handling
rubato = "0.16"  # Sample rate conversion

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# HTTP client for LLM APIs and model downloads
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Web search
regex = "1"
urlencoding = "2"

# Channel communication
crossbeam-channel = "0.5"

# File/path utilities
directories = "6"

# System info
num_cpus = "1.16"
sysinfo = "0.32"

# Window detection for meeting detection (lists all windows)
x-win = "5"

# Async trait support
async-trait = "0.1"

# Progress tracking
indicatif = "0.17"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"
zip = "2"

[features]
default = []
parakeet = ["rustfft"]

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSArray", "NSString", "NSError"] }
block2 = "0.6"

